--- a/application-dev.yml
+++ b/application-dev.yml
@@ -1,2 +1,4 @@
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 eureka.instance.prefer-ip-address=true
+eureka.instance.fetch-registry =true
+eureka.instance.register-with-eureka=true
