--- a/application-dev.yml
+++ b/application-dev.yml
@@ -1,3 +1,5 @@
+spring.application.name=Config-Dev
+
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 eureka.instance.prefer-ip-address=true
 eureka.instance.fetch-registry =true
